--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@storybook/addon-interactions": "7.6.17",
     "@storybook/addon-mdx-gfm": "7.6.17",
     "@storybook/blocks": "^7.5.1",
-    "@storybook/core-server": "7.6.17",
+    "@storybook/core-server": "^7.6.20",
     "@storybook/jest": "0.2.3",
     "@storybook/preview-api": "^7.5.1",
     "@storybook/react": "7.6.17",
@@ -141,7 +141,7 @@
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "lint-staged": "^15.0.2",
-    "newman": "^6.0.0",
+    "newman": "^5.3.2",
     "nx": "18.0.6",
     "prettier": "^3.0.3",
     "prisma": "^5.9.1",
@@ -159,7 +159,7 @@
     "typescript": "5.3.3",
     "url-loader": "^4.1.1",
     "uuidv4": "^6.2.13",
-    "vite": "5.1.4",
+    "vite": "^5.3.3",
     "vite-plugin-eslint": "1.8.1",
     "vite-tsconfig-paths": "4.2.1",
     "vitest": "0.34.6",
@@ -179,8 +179,8 @@
     "@angular/platform-browser": "~16.2.0",
     "@angular/platform-browser-dynamic": "~16.2.0",
     "@angular/router": "~16.2.0",
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/preset-classic": "2.4.3",
+    "@docusaurus/core": "^3.4.0",
+    "@docusaurus/preset-classic": "^3.4.0",
     "@mdx-js/react": "^3.0.0",
     "@ngneat/falso": "^7.1.1",
     "@previewjs/config-helper-nextjs": "^1.0.23",
@@ -198,7 +198,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "marked": "^9.1.2",
-    "next": "14.0.4",
+    "next": "^14.2.5",
     "playwright": "^1.32.1",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.2.0",
